<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:theme="@style/santaaibot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/app_bg">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:paddingTop="100dp"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/app_name"
                app:titleTextColor="@color/black"  />


            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="60dp"
                android:layout_height="53dp"
                android:clickable="true"
                android:padding="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/bot_slogan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/toolbar"
                android:src="@drawable/menu"
                android:focusable="true" />


            <TextView
                android:layout_width="139dp"
                android:layout_height="49dp"
                android:layout_marginStart="136dp"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="1dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/toolbar" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/chat_scroll_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintBottom_toTopOf="@+id/ll_layout_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/bot_slogan">

                <LinearLayout
                    android:id="@+id/chat_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </androidx.core.widget.NestedScrollView>
            <androidx.core.widget.NestedScrollView
                android:layout_width="492dp"
                android:layout_height="608dp"
                app:layout_constraintBottom_toTopOf="@+id/ll_layout_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                android:contentDescription="@string/common_google_play_services_unknown_issue"/>

            <LinearLayout
                android:id="@+id/ll_layout_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E4E4E4"
                android:orientation="horizontal"
                android:paddingBottom="0dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <EditText
                    android:id="@+id/user_question_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:layout_weight=".8"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/Text_text"
                    android:importantForAutofill="no"
                    android:imeOptions="actionSend"
                    android:inputType="textShortMessage"
                    android:padding="10dp"
                    android:singleLine="true" />
                <Button
                    android:id="@+id/send_button"
                    android:layout_width="17dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_button"
                    android:layout_margin="10dp"
                    android:layout_weight=".2"
                    android:textColor="@color/white"
                    android:backgroundTint="#26A69A"
                    android:text="@string/send" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/nav_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>


